--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=REM:ital,wght@1,900&display=swap');
+    </style>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
